<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="title_bar">PATIENT DETAILS</string>
    <string name="patient_id">PATIENT ID</string>
    <string name="patient_fname">FIRST NAME</string>
    <string name="patient_lname">LAST NAME</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="patient_number">PHONE NUMBER</string>
    <string name="patient_email">EMAIL</string>
    <string name="patient_lens">LENS</string>
    <string name="patient_history">PATIENT HISTORY</string>
    <string name="doctor_name">DOCTOR NAME</string>
    <string name="patient_blood_group">BLOOD GROUP</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="select">SELECT EYE</string>
    <string name="brightness">BRIGHTNESS LEVEL</string>
    <string name="button2">SAVE</string>
    <string name="instruction">PLEASE PLUG IN YOUR EARPHONES AND PRESS START BY CLICKING YOUR HEADPHONE</string>
</resources>
